# KFPy

./: .cproject  .gitignore  AbstractROUKF.cpp  AbstractROUKF.h  CMakeLists.txt  MappedROUKF.cpp  MappedROUKF.h  README.md  ROUKF.cpp  ROUKF.h  ROUKFPy.cpp  SigmaPointsGenerator.cpp  SigmaPointsGenerator.h  StaticROUKF.cpp  StaticROUKF.h  build.sh  example.cpp  example2.cpp  install.sh  kalman.doxyfile  roukf_py.cpp  usage.py
doc/html/: AbstractPameterMapper_8d_source.html  AbstractParameterMapper_8cpp_source.html  AbstractParameterMapper_8d_source.html  AbstractParameterMapper_8h_source.html  AbstractROUKF_8cpp_source.html  AbstractROUKF_8h_source.html  CompositeParameterMapper_8cpp_source.html  CompositeParameterMapper_8d_source.html  CompositeParameterMapper_8h_source.html  ConfigurationFileReader_8cpp_source.html  ConfigurationFileReader_8d_source.html  ConfigurationFileReader_8h_source.html  Debug_2AbstractROUKF_8d_source.html  Debug_2MappedROUKF_8d_source.html  Debug_2ROUKF_8d_source.html  Debug_2SigmaPointsGenerator_8d_source.html  Debug_2StaticROUKF_8d_source.html  Debug_2mapping_2ExponentialParameterMapper_8d_source.html  Debug_2mapping_2IdentityParameterMapper_8d_source.html  Debug_2mapping_2SigmoidParameterMapper_8d_source.html  ExponentialParameterMapper_8cpp_source.html  ExponentialParameterMapper_8h_source.html  IdentityParameterMapper_8cpp_source.html  IdentityParameterMapper_8h_source.html  MappedROUKF_8cpp_source.html  MappedROUKF_8h_source.html  ROUKF_8cpp_source.html  ROUKF_8h_source.html  Release_2AbstractROUKF_8d_source.html  Release_2MappedROUKF_8d_source.html  Release_2ROUKF_8d_source.html  Release_2SigmaPointsGenerator_8d_source.html  Release_2StaticROUKF_8d_source.html  Release_2mapping_2ExponentialParameterMapper_8d_source.html  Release_2mapping_2IdentityParameterMapper_8d_source.html  Release_2mapping_2SigmoidParameterMapper_8d_source.html  SigmaPointsGenerator_8cpp_source.html  SigmaPointsGenerator_8h_source.html  SigmoidParameterMapper_8cpp_source.html  SigmoidParameterMapper_8h_source.html  (+127 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  (+11 more)
doc/latex/: annotated.tex  classAbstractParameterMapper.eps  classAbstractParameterMapper.tex  classAbstractParameterMapper__inherit__graph.md5  classAbstractROUKF.eps  classAbstractROUKF.tex  classAbstractROUKF__inherit__graph.md5  classCompositeParameterMapper.eps  classCompositeParameterMapper.tex  classCompositeParameterMapper__coll__graph.md5  classCompositeParameterMapper__inherit__graph.md5  classConfigurationFileReader.tex  classConfigurationFileReader__coll__graph.md5  classConfigurationFileReader_a2bea7f730d5caf67b9d3e1bf45072542_cgraph.md5  classExponentialParameterMapper.eps  classExponentialParameterMapper.tex  classExponentialParameterMapper__coll__graph.md5  classExponentialParameterMapper__inherit__graph.md5  classIdentityParameterMapper.eps  classIdentityParameterMapper.tex  classIdentityParameterMapper__coll__graph.md5  classIdentityParameterMapper__inherit__graph.md5  classMappedROUKF.eps  classMappedROUKF.tex  classMappedROUKF__coll__graph.md5  classMappedROUKF__inherit__graph.md5  classMappedROUKF_a0a91ee2acdfa66f4f788ebcc920e112a_cgraph.md5  classMappedROUKF_a0febaff07fa4b563653ed83ab9f3a753_cgraph.md5  classMappedROUKF_a3747b98efef856486df6428746807808_cgraph.md5  classMappedROUKF_a37d0e3963e90076ce32f41189e088ed0_cgraph.md5  classMappedROUKF_a4d3a109dc95812c8d9c6ac2a489349c2_cgraph.md5  classMappedROUKF_aa6670e2cc9899b93b71db3f238ae93f3_cgraph.md5  classMappedROUKF_ab6a3f488ef97ee3d8e11efa5aa0385c7_cgraph.md5  classMappedROUKF_ad4ddf881c1ade83fe0cc2ab99ad58b7e_cgraph.md5  classMappedROUKF_ad84ef097844217e5c5342e2ee8968521_cgraph.md5  classROUKF.eps  classROUKF.tex  classROUKF__coll__graph.md5  classROUKF__inherit__graph.md5  classROUKF_a16fd0fbe99e00745254f56052ad44f3f_cgraph.md5  (+17 more)
doc/man/man3/: AbstractParameterMapper.3  AbstractROUKF.3  CompositeParameterMapper.3  ConfigurationFileReader.3  ExponentialParameterMapper.3  IdentityParameterMapper.3  MappedROUKF.3  ROUKF.3  SigmaPointsGenerator.3  SigmoidParameterMapper.3  StaticROUKF.3
io/: ConfigurationFileReader.cpp  ConfigurationFileReader.h
mapping/: AbstractParameterMapper.cpp  AbstractParameterMapper.h  CompositeParameterMapper.cpp  CompositeParameterMapper.h  ExponentialParameterMapper.cpp  ExponentialParameterMapper.h  IdentityParameterMapper.cpp  IdentityParameterMapper.h  SigmoidParameterMapper.cpp  SigmoidParameterMapper.h
python/: example2.py  setup.py  usage.py
